2024-08-31  Oliver Kiddle  <opk@zsh.org>

	* Clinton Bunch: 53060: Doc/Zsh/mod_random.yo,
	Src/Modules/random.c: silence build warnings

	* Clinton Bunch: 53056: Completion/Zsh/Type/_module_math_func,
	Doc/Makefile.in, Doc/Zsh/mod_random.yo, Src/Modules/random.c,
	Src/Modules/random.mdd, Src/Modules/random_real.c, configure.ac:
	new zsh/random module defining an SRANDOM parameter and
	zrand_float() and zrand_int() math functions

	* github #120: Semnodime: Completion/Unix/Command/_git: update
	_git to reflect `--recursive` being an alias

	* 53058: Completion/Unix/Command/_zstd: new completion for zstd

	* 53057: Completion/Zsh/Context/_equal: complete glob qualifiers
	following an equals expansion

	* 53052: Completion/X/Command/_setxkbmap: update completion with
	newer options

2024-08-26  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* unposted: Doc/Zsh/compsys.yo: remove reference to removed code

2024-08-15  Bart Schaefer  <schaefer@zsh.org>

	* unposted (see 53034): Src/lex.c, Test/A06assign.ztst: fix parsing
	of Bang token in value side of array element assignment

2024-08-13  Eric Cook  <llua@gmx.com>

	* 53031: Christian Heusel: Completion/Unix/Command/_git: add
	missing terminator in case statement

2024-08-06  Bart Schaefer  <schaefer@zsh.org>

	* Jun.T: 53026: Src/params.c: fix failure to free old value when
	setting new value of reference

2024-08-05  Bart Schaefer  <schaefer@zsh.org>

	* 53025: Src/loop.c, Src/params.c: fix two memory leaks and two
	pointer errors when encountering a named reference self-reference

	* 53023: Src/params.c: fix memory leak of unset private parameter

2024-08-04  Bart Schaefer  <schaefer@zsh.org>

	* Philippe Altherr: 53005: Src/exec.c: off-by-one error when
	resetting signals on subshell entrance

2024-08-03  Eric Cook  <llua@gmx.com>

	* 52989: Completion/Unix/Command/_rsync,
	Completion/Unix/Type/_remote_files: support rsync 3.2.4+ remote
	filename handling.
